--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+
+html{
+    scroll-behavior: smooth;
+}
+
+
 body{ 
     font-family: "Montserrat", sans-serif;
 
@@ -248,4 +254,55 @@ background-color: #f7f7f7;
     font-size: 24px;
     color: gold;
     font-weight: lighter;
+}
+
+/* width scroll bar */
+::-webkit-scrollbar{ 
+    width: 10px;
+    
+}
+
+/* track scroll bar */
+::-webkit-scrollbar-track{
+    background-color: rgba(255, 217, 0, 0.336);
+}
+
+/* handle scroll */
+::-webkit-scrollbar-thumb{
+    background-color: red;
+    border-radius: 10px;
+    
+}
+
+::-webkit-scrollbar-track{
+    color: #000;
+}
+
+.to-top{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    /* width: 25px;
+    height: 25px; */
+    /* background-color: gold; */
+    border-radius: 50%;
+    /* padding: 5px; */
+    font-size: 24px;
+    color: gold;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+   
+}
+
+.social a i { 
+    transition: 0.3s ease-in-out;
+    border-radius: 50%;
+
+}
+.social a:hover i { 
+    transform: scale(1.2);
+    box-shadow: 0 0 10px red;
 }
